--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-mono": "^5.0.1",
+    "@types/jsdom": "^21.1.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.12.13",
+    "jsdom": "^22.1.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
