--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-mono": "^5.0.1",
+    "@tanstack/react-query": "^4.29.11",
     "@types/jsdom": "^21.1.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
